--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,6 +8,7 @@ metadata:
     backstage.io/kubernetes-id: demo
     backstage.io/kubernetes-label-selector: backstage.io/kubernetes-id=demo-nestjs
     backstage.io/techdocs-ref: dir:.
+    github.com/project-slug: HUIKUB/backstate-nestjs-demo
   tags:
   - nestjs
   links:
@@ -31,6 +32,7 @@ metadata:
     backstage.io/kubernetes-id: demo
     backstage.io/kubernetes-label-selector: backstage.io/kubernetes-id=demo-nginx
     backstage.io/techdocs-ref: url:https://github.com/HUIKUB/backstate-nestjs-demo/tree/main
+    github.com/project-slug: HUIKUB/backstate-nestjs-demo
   tags:
   - nginx
   links:
