feat: update rule prometheus 💸

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -33,8 +33,8 @@ metadata:
     backstage.io/kubernetes-label-selector: backstage.io/kubernetes-id=demo-nginx
     backstage.io/techdocs-ref: url:https://github.com/HUIKUB/backstate-nestjs-demo/tree/main
     prometheus.io/service-name: staging
-    prometheus.io/rule: api_requests_per_second|endpoint
-    prometheus.io/alert: 'API High Latency'
+    prometheus.io/rule: up|job
+    prometheus.io/alert: all
     github.com/project-slug: HUIKUB/backstate-nestjs-demo
   tags:
   - nginx
