--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -35,6 +35,7 @@ metadata:
     prometheus.io/service-name: staging
     prometheus.io/rule: up|job
     prometheus.io/alert: all
+    grafana/alert-label-selector: 'tag=huikub-nginx'
     grafana/dashboard-selector: 'tag:huikub-nginx'
     grafana/overview-dashboard: 'd/nginx_uid/nginx-overview?orgId=1&var-service=huikub'
     github.com/project-slug: HUIKUB/backstate-nestjs-demo
