--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -35,9 +35,9 @@ metadata:
     prometheus.io/service-name: staging
     prometheus.io/rule: up|job
     prometheus.io/alert: all
-    grafana/dashboard-selector: "(tags @> 'my-service' || tags @> 'my-service-slo') && tags @> 'generated'"
-    grafana/alert-label-selector: "(tags @> 'my-service' || tags @> 'my-service-slo') && tags @> 'generated'"
-    grafana/overview-dashboard: 'd/adpb5c7/nginx-overview?orgId=1&var-service=huikub'
+    grafana/dashboard-selector: ""
+    grafana/alert-label-selector: ""
+    grafana/overview-dashboard: "d/adpb5c7/nginx-overview?orgId=1"
     github.com/project-slug: HUIKUB/backstate-nestjs-demo
   tags:
   - nginx
