--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@scalar/nestjs-api-reference": "^1.0.5",
+    "@scalar/nestjs-api-reference": "^1.0.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
@@ -31,9 +31,12 @@
     "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@elastic/elasticsearch": "^9.2.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/elasticsearch": "^11.1.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/testing": "^11.0.1",
@@ -73,5 +76,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "yarn@4.4.1+sha512.f825273d0689cc9ead3259c14998037662f1dcd06912637b21a450e8da7cfeb4b1965bbee73d16927baa1201054126bc385c6f43ff4aa705c8631d26e12460f1"
 }
