--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,17 +1,15 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 15s
 
 scrape_configs:
-- job_name: 'nestjs'
-  metrics_path: /metrics
+- job_name: 'prometheus'
+  static_configs:
+  - targets: [ 'localhost:9090' ]
+
+- job_name: 'nestjs-app'
   static_configs:
   - targets: [ 'nestjs:8001' ]
 
-- job_name: 'elasticsearch'
-  metrics_path: /
+- job_name: 'elasticsearch-exporter'
   static_configs:
-  - targets: [ 'elasticsearch:9200' ]
-
-  - job_name: 'elasticsearch-exporter'
-    static_configs:
-    - targets: [ 'elasticsearch-exporter:9114' ]
+  - targets: [ 'elasticsearch-exporter:9114' ]
