feat: docker add network 💸

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,3 +42,7 @@ services:
       - ELASTICSEARCH_NODE=http://elasticsearch:9200
     depends_on:
       - elasticsearch
+
+networks:
+  poc-backstage:
+    driver: bridge
