--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - xpack.security.enabled=false
     ports:
       - "9200:9200"
+    networks:
+      - poc-backstage
 
   elasticsearch-exporter:
     image: quay.io/prometheuscommunity/elasticsearch-exporter:latest
@@ -15,6 +17,8 @@ services:
       - "9114:9114"
     environment:
       - ES_URI=http://elasticsearch:9200
+    networks:
+      - poc-backstage
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.14.0
@@ -24,6 +28,8 @@ services:
       - "5601:5601"
     depends_on:
       - elasticsearch
+    networks:
+      - poc-backstage
 
   prometheus:
     image: prom/prometheus
@@ -31,6 +37,8 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - poc-backstage
 
   nestjs:
     build:
@@ -42,6 +50,8 @@ services:
       - ELASTICSEARCH_NODE=http://elasticsearch:9200
     depends_on:
       - elasticsearch
+    networks:
+      - poc-backstage
 
 networks:
   poc-backstage:
