--- a/k8.yml
+++ b/k8.yml
@@ -46,14 +46,13 @@ metadata:
   name: elasticsearch
   namespace: backstage
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: elasticsearch
   ports:
   - protocol: TCP
     port: 9200
     targetPort: 9200
-    nodePort: 30092
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -94,14 +93,13 @@ metadata:
   name: elasticsearch-exporter
   namespace: backstage
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: elasticsearch-exporter
   ports:
   - protocol: TCP
     port: 9114
     targetPort: 9114
-    nodePort: 30114
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -153,14 +151,13 @@ metadata:
   name: kibana
   namespace: backstage
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: kibana
   ports:
   - protocol: TCP
     port: 5601
     targetPort: 5601
-    nodePort: 30056
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -206,14 +203,13 @@ metadata:
   name: prometheus
   namespace: backstage
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: prometheus
   ports:
   - protocol: TCP
     port: 9090
     targetPort: 9090
-    nodePort: 30090
 ---
 apiVersion: v1
 kind: ConfigMap
