--- a/k8.yml
+++ b/k8.yml
@@ -140,6 +140,8 @@ spec:
           value: "false"
         - name: xpack.encryptedSavedObjects.encryptionKey
           value: "something_at_least_32_characters"
+        - name: SERVER_HOST
+          value: "0.0.0.0"
 ---
 apiVersion: v1
 kind: Service
