--- a/k8.yml
+++ b/k8.yml
@@ -33,11 +33,9 @@ spec:
           requests:
             memory: "512Mi"
             cpu: "250m"
-            ephemeral-storage: "1Gi"
           limits:
-            memory: "2Gi"
-            cpu: "1"
-            ephemeral-storage: "5Gi"
+            memory: "1Gi"
+            cpu: "500m"
         env:
         - name: discovery.type
           value: single-node
