--- a/k8.yml
+++ b/k8.yml
@@ -25,10 +25,10 @@ spec:
         image: busybox
         command: [ 'sh', '-c', 'until nc -z elasticsearch 9200; do echo waiting for elasticsearch; sleep 5; done;' ]
       containers:
-      - name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
+      - name: kibana
+        image: docker.elastic.co/kibana/kibana:8.14.0
         ports:
-        - containerPort: 9200
+        - containerPort: 5601
         resources:
           requests:
             memory: "512Mi"
@@ -37,10 +37,16 @@ spec:
             memory: "1Gi"
             cpu: "500m"
         env:
-        - name: discovery.type
-          value: single-node
+        - name: ELASTICSEARCH_HOSTS
+          value: http://elasticsearch:9200
+        - name: SERVER_NAME
+          value: "kibana"
         - name: xpack.security.enabled
           value: "false"
+        - name: xpack.encryptedSavedObjects.encryptionKey
+          value: "something_at_least_32_characters"
+        - name: SERVER_HOST
+          value: "0.0.0.0"
 ---
 apiVersion: v1
 kind: Service
