--- a/k8.yml
+++ b/k8.yml
@@ -20,33 +20,25 @@ spec:
         app: elasticsearch
     spec:
       automountServiceAccountToken: false
-      initContainers:
-      - name: wait-for-elasticsearch
-        image: busybox
-        command: [ 'sh', '-c', 'until nc -z elasticsearch 9200; do echo waiting for elasticsearch; sleep 5; done;' ]
       containers:
-      - name: kibana
-        image: docker.elastic.co/kibana/kibana:8.14.0
+      - name: elasticsearch
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
         ports:
-        - containerPort: 5601
+        - containerPort: 9200
         resources:
           requests:
             memory: "512Mi"
             cpu: "250m"
+            ephemeral-storage: "1Gi"
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "2Gi"
+            cpu: "1"
+            ephemeral-storage: "5Gi"
         env:
-        - name: ELASTICSEARCH_HOSTS
-          value: http://elasticsearch:9200
-        - name: SERVER_NAME
-          value: "kibana"
+        - name: discovery.type
+          value: single-node
         - name: xpack.security.enabled
           value: "false"
-        - name: xpack.encryptedSavedObjects.encryptionKey
-          value: "something_at_least_32_characters"
-        - name: SERVER_HOST
-          value: "0.0.0.0"
 ---
 apiVersion: v1
 kind: Service
@@ -125,6 +117,10 @@ spec:
         app: kibana
     spec:
       automountServiceAccountToken: false
+      initContainers:
+      - name: wait-for-elasticsearch
+        image: busybox
+        command: [ 'sh', '-c', 'until nc -z elasticsearch 9200; do echo waiting for elasticsearch; sleep 5; done;' ]
       containers:
       - name: kibana
         image: docker.elastic.co/kibana/kibana:8.14.0
@@ -134,9 +130,9 @@ spec:
           requests:
             memory: "512Mi"
             cpu: "250m"
-        limits:
-          memory: "1Gi"
-          cpu: "500m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
         env:
         - name: ELASTICSEARCH_HOSTS
           value: http://elasticsearch:9200
