--- a/k8.yml
+++ b/k8.yml
@@ -297,3 +297,53 @@ spec:
   - protocol: TCP
     port: 3002
     targetPort: 3002
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: backstage-poc
+  namespace: backstage
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: backstage-poc
+  template:
+    metadata:
+      labels:
+        app: backstage-poc
+    spec:
+      automountServiceAccountToken: false
+      containers:
+      - name: backstage-poc
+        image: esb-backstage-portal-backend:latest
+        ports:
+        - containerPort: 7007
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+            ephemeral-storage: "256Mi"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+            ephemeral-storage: "1Gi"
+        env:
+        - name: PROMETHEUS_URL
+          value: http://prometheus.backstage.svc.cluster.local:9090
+---
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backstage-poc
+  namespace: backstage
+spec:
+  selector:
+    app: backstage-poc
+  ports:
+  - protocol: TCP
+    port: 7007
+    targetPort: 7007
